<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dev.mail.lpta2302.final_mobile.navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.dev.mail.lpta2302.final_mobile.navigation.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dev.mail.lpta2302.final_mobile.navigation.notifications.NotificationsFragment"
        android:label="@string/action_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.dev.mail.lpta2302.final_mobile.navigation.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_options"
        android:name="com.dev.mail.lpta2302.final_mobile.navigation.options.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
    <fragment
        android:id="@+id/navigation_addnews"
        android:name="com.dev.mail.lpta2302.final_mobile.navigation.addnews.AddnewsFragment"
        android:label="@string/title_addnews"
        tools:layout="@layout/fragment_addnews" />
</navigation>